--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "speech-recognition-demo",
+  "name": "speech-recognition-app",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.3.3",
-    "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16"
+    "tailwindcss": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -36,5 +38,9 @@
     ]
   },
   "moduleResolution": "node",
-  "allowImportingTsExtensions": true
+  "allowImportingTsExtensions": true,
+  "homepage": "https://yarivtch.github.io/speech-recognition-app",
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  }
 }
